# kistentracker

./: .flake8  .gitignore  AGENTS.md  Caddyfile  Caddyfile.internal  Caddyfile.internet  Containerfile.backend  Containerfile.frontend  compose.yml  deploy-root.py  deploy-user.py  gencert.py  notes.md  opencode.json  pyproject.toml
.opencode/commands/: test.md
dbtrials/: manage.py
dbtrials/dbtrials/: admin.py  api.py  asgi.py  grai_helpers.py  models.py  permissions.py  schemas.py  settings.py  urls.py  wsgi.py
dbtrials/dbtrials/migrations/: 0001_initial.py  0002_rentalaction.py  0003_building_rentalgroup_fields.py  0004_itemtype.py  0005_item_class_field.py  0006_item_class_no_default.py  0007_rename_building_packstreet_cookinggroup_and_more.py  0008_revert_rename_back_to_building_rentalgroup.py  0009_rename_building_packstreet_cookinggroup_and_more.py  0010_add_correct_action.py  0011_rentalaction_signed_quantity.py  0012_add_user_show_consumables.py  0014_add_user_selected_packstreet.py  (+9 more)
deployment/: .env.example  Caddyfile.internet  Caddyfile.local  README.md  backend.Dockerfile  compose.smoke.yml  compose.yml  entrypoint.sh  frontend.Dockerfile  generate-env.py  run_commands.sh  smoke_test.sh
deployment/root_setup/: .gitignore  README.md  generate.py  install-user.sh
frontend/: .gitignore  README.md  index.html  nginx.conf  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend-dist/: index.html
frontend-dist/assets/: index-CCYYeSUK.js  index-HLWgXvSt.css
frontend/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css  types.ts
systemd/: caddy.service.in  caddy.socket.in
(+22 files in other folders)
